# txjsonrpc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECK_THIS_BEFORE_UPLOAD.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  README.rst  SECURITY.md  pyproject.toml  setup.py  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build.yml  scorecard.yml
.junie/: guidelines.md
admin/: commit.sh  defs.sh  runExamples.py  testDocs.py
docs/: DEPENDENCIES.md  HISTORY.md  INSTALL.md  USAGE.md
docs/specs/: pre-version-1.0.txt  version-1.0.txt  version-2.0-proposed.txt
examples/ssl/: client.py  server.py
examples/tcp/: client.py  client_subhandled.py  server.tac  server_subhandled.tac
examples/web/: client.py  server.tac
examples/webAuth/: client.py  server.tac
tests/: test_auth.py  test_examples.py  test_jsonrpc.py  test_jsonrpclib.py
tests/netstring/: test_jsonrpc.py
tests/web/: test_jsonrpc.py
txjsonrpc/: jsonrpc.py  jsonrpclib.py
txjsonrpc/netstring/: jsonrpc.py
txjsonrpc/scripts/: getVersion.py
txjsonrpc/test/: test_jsonrpc.py  test_jsonrpclib.py
txjsonrpc/web/: jsonrpc.py  render.py
txjsonrpc_ng/: auth.py  jsonrpc.py  jsonrpclib.py
txjsonrpc_ng/netstring/: jsonrpc.py
txjsonrpc_ng/scripts/: getVersion.py
txjsonrpc_ng/util/: dist.py
txjsonrpc_ng/web/: data.py  jsonrpc.py  render.py
xjsonrpc/: jsonrpc.py  meta.py
xjsonrpc/jsonrpclib/: __init__.py
xjsonrpc/scripts/: getVersion.py
xjsonrpc/test/: test_auth.py  test_jsonrpc.py  test_jsonrpclib.py
xjsonrpc/txweb/: jsonrpc.py
(+3 files in other folders)
