[tool.poetry]
name = "txjsonrpc-ng"
version = "0.7.0"
description = "Code for creatig Twisted JSON-RPC servers and clients."
authors = ["Duncan McGreggor <oubiwann@adytum.us>, Andreas Wuerl <andi@tryb.de>"]
license = "BSD, GPL"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
Twisted = "^24.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
mock = "^5.1.0"
pytest-twisted = "^1.14.3"
mypy = "^1.12.0"

[tool.coverage.run]
omit = ["**/test_*.py"]
branch = true
relative_files = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
