[project]
name = "txjsonrpc-ng"
version = "0.8.0"
description = "Code for creating Twisted JSON-RPC servers and clients."
authors = [
    {name = "Duncan McGreggor", email = "oubiwann@adytum.us"},
    {name = "Andreas Würl", email = "andi@tryb.de"}
]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "twisted>=25.5"
]

[tool.poetry.group.dev.dependencies]
assertpy = "^1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
mock = "^5.1.0"
pytest-twisted = "^1.14.3"
mypy = "^1.12.0"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_decorated = false
no_implicit_optional = false

[tool.coverage.run]
omit = ["**/test_*.py"]
branch = true
relative_files = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
